@@ -454,3 +454,6 @@ N(OP_AdventureStatsReply),
 N(OP_AdventureLeaderboardRequest),
 N(OP_AdventureLeaderboardReply),
 N(OP_SetStartCity),
+N(OP_LoginUnknown1),
+N(OP_LoginUnknown2),
+N(OP_ItemViewUnknown),
