@@ -502,8 +502,12 @@ OP_MoveLogDisregard=0x0000		#gone I think
 #named unknowns, to make looking for real unknown easier
 OP_AnnoyingZoneUnknown=0x0000		#Trevius 02/20/09
 OP_Some6ByteHPUpdate=0x0000		#seems to happen when you target group members
-
 OP_QueryResponseThing=0x0000		#
+
+# realityincarnate: these are just here to stop annoying several thousand byte packet dumps
+OP_LoginUnknown1=0x22cf			
+OP_LoginUnknown2=0x43ba			
+OP_ItemViewUnknown=0x4db4		
 
 #Petition Opcodes
 OP_PetitionSearch=0x0000                #search term for petition
